# routes/orders.js
@@ -9,7 +9,22 @@ router.get('/:id', controller.getSingle);
 
 // Protected
 router.post('/', isAuthenticated, controller.createOrder);
+/*
+  #swagger.tags = ['Orders']
+  #swagger.description = 'Create a new order (Login required)'
+  #swagger.security = [{ "githubAuth": [] }]
+*/
 router.put('/:id', isAuthenticated, controller.updateOrder);
+/*
+  #swagger.tags = ['Orders']
+  #swagger.description = 'Update an order (Login required)'
+  #swagger.security = [{ "githubAuth": [] }]
+*/
 router.delete('/:id', isAuthenticated, controller.deleteOrder);
+/*
+  #swagger.tags = ['Orders']
+  #swagger.description = 'Delete an order (Login required)'
+  #swagger.security = [{ "githubAuth": [] }]
+*/
 
 module.exports = router;
